button to move to next page, shell set up properly and basic pages

--- a/CycleSafe/CycleSafe/CycleSafe/AppShell.xaml
+++ b/CycleSafe/CycleSafe/CycleSafe/AppShell.xaml
@@ -1,14 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<Shell xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CycleSafe.AppShell"
-             BackgroundColor="DodgerBlue">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome To Cycle Safe!"
-                VerticalOptions="StartAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Button Text="Connect" Clicked="Connect"/>
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+             xmlns:local="clr-namespace:CycleSafe"
+             x:Class="CycleSafe.AppShell">
+    <ShellItem Route="ConnectPage">
+        <ShellContent ContentTemplate="{DataTemplate local:ConnectPage}"/>
+    </ShellItem>
+</Shell>
