--- a/CycleSafe/CycleSafe/CycleSafe/ConnectPage.xaml
+++ b/CycleSafe/CycleSafe/CycleSafe/ConnectPage.xaml
@@ -4,15 +4,13 @@
              x:Class="CycleSafe.ConnectPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Choose Your Device"
+            <Label Text="Welcome to CycleSafe"
                 VerticalOptions="StartAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            <Button Text="MyDevice"
-                VerticalOptions="StartAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Button Text="Add Device"
-                VerticalOptions="StartAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Button Text="Connect"
+                    VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand"
+                    Clicked="Connect"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
