--- a/CycleSafe/CycleSafe/CycleSafe/HomeScreen.xaml
+++ b/CycleSafe/CycleSafe/CycleSafe/HomeScreen.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CycleSafe.Views.HomeScreen">
+             x:Class="CycleSafe.HomeScreen">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
