--- a/CycleSafe/CycleSafe/CycleSafe/Views/HomeScreen.xaml
+++ b/CycleSafe/CycleSafe/CycleSafe/Views/HomeScreen.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CycleSafe.HomeScreen">
+             x:Class="CycleSafe.Views.HomeScreen">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Button Text="Alert"
+                    VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand"
+                    Clicked="Alert"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
