--- a/CycleSafe/CycleSafe/CycleSafe/AppShell.xaml
+++ b/CycleSafe/CycleSafe/CycleSafe/AppShell.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:CycleSafe.Views"
              x:Class="CycleSafe.AppShell">
-    <ShellItem Route="ConnectPage">
+    <FlyoutItem Title="Connect Page"
+                Icon="bluetooth.png">
         <ShellContent ContentTemplate="{DataTemplate local:ConnectPage}"/>       
-    </ShellItem>
-    <ShellItem Route="HomeScreen">
+    </FlyoutItem>
+    <FlyoutItem Title="Home Screen">
         <ShellContent ContentTemplate="{DataTemplate local:HomeScreen}"/>
-    </ShellItem>
+    </FlyoutItem>
 </Shell>
