allowing for user to rename device

--- a/CycleSafeJava/app/src/main/res/layout/settingsfragment_layout.xml
+++ b/CycleSafeJava/app/src/main/res/layout/settingsfragment_layout.xml
@@ -2,20 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/settings_Tab"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is Settings Page"
-        android:textSize="30sp"/>
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/connect_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Connect"
-        android:onClick="Connect"/>
+        android:onClick="Connect"
+        android:text="Connect" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/DeviceID"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="hint" />
+
+        <Button
+            android:id="@+id/ChangeNameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:onClick="ChangeDeviceID"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
