more app changes

--- a/CycleSafeJava/app/src/main/res/layout/activity_main.xml
+++ b/CycleSafeJava/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,6 @@
                 android:layout_height="wrap_content"
                 android:text="Settings" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Ride" />
         </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -56,5 +52,5 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_dialog_map" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
