--- a/CycleSafeJava/app/src/main/res/layout/activity_maps2.xml
+++ b/CycleSafeJava/app/src/main/res/layout/activity_maps2.xml
@@ -30,6 +30,47 @@
         android:text="@string/SetMarker"
         android:onClick="SetMarker"/>
 
+    <TextView
+        android:id="@+id/Speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="353dp"
+        android:layout_marginBottom="489dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/Distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="352dp"
+        android:layout_marginBottom="542dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/FastestSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="353dp"
+        android:layout_marginBottom="516dp"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/StartRide"
+        android:layout_width="127dp"
+        android:layout_height="37dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="274dp"
+        android:layout_marginBottom="9dp"
+        android:text="Start Ride"
+        android:onClick="StartRide"/>
+
 </RelativeLayout>
 
 
