--- a/CycleSafeJava/app/src/main/res/layout/settingsfragment_layout.xml
+++ b/CycleSafeJava/app/src/main/res/layout/settingsfragment_layout.xml
@@ -35,21 +35,21 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Brake"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Blind Spot Detection"
         android:onClick="BrakeSwitch" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/Turn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Turn Signals"
         android:onClick="TurnSwitch" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/Notify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Battery Notifications"
